package gamer.cfg;
import "actor_type_cfg.proto";
import "common_cfg.proto";

message Actor {  
  required int32 id                  = 1;
  required ActorTypes actor_type     = 2;
  required int32 model_id            = 3;
  required Vec3 position             = 4;
  required Vec3 rotation             = 5;
  optional float scale               = 6[default = 1];
  required float ai_update_interval  = 7;
  required int32 first_state_id      = 8;
}

message ActorCfg {
  repeated Actor actor = 1;
}